--- a/public/index.html
+++ b/public/index.html
@@ -16,32 +16,110 @@
             <div class="logo_container">
                 <img src="utils/images/logo.png" alt="">
             </div>
-            <div>
-                <div class="description_container">
-                    <p class="description_container_paragraph">
-                        Talk with other user by passing his personal code or talk with strangers
+            <div class="description_container">
+                <p class="description_container_paragraph">
+                    Talk with other user by passing his personal code or talk with strangers
+                </p>
+            </div>
+            <div class="personal_code_container">
+                <div class="personal_code_title_container">
+                    <p class="personal_code_title_paragraph">
+                        Your personal code
                     </p>
                 </div>
-                <div class="personal_code_container">
-                    <div class="personal_code_title_container">
-                        <p class="personal_code_title_paragraph">
-                            Your personal code
-                        </p>
-                    </div>
-                    <div class="personal_code_value_container">
-                        <p class="personal_code_value_paragraph" id="personal_code_paragraph">DDDD</p>
-                        <button class="personal_code_copy_button" id="personal_code_copy_button">
-                            <img src="utils/images/copyButton.png" alt="">
-                        </button>
-                    </div>
+                <div class="personal_code_value_container">
+                    <p class="personal_code_value_paragraph" id="personal_code_paragraph">DDDD</p>
+                    <button class="personal_code_copy_button" id="personal_code_copy_button">
+                        <img src="utils/images/copyButton.png" alt="">
+                    </button>
                 </div>
+            </div>
+            <div class="personal_code_connecting_container">
+                <p class="personal_code_connecting_paragraph">Personal Code</p>
+                <div class="personal_code_connecting_input_container">
+                    <input type="text" class="personal_code_input" id="personal_code_input">
+                </div>
+                <div class="personal_code_connecting_buttons_container">
+                    <button class="connecting_button" id="personal_code_chat_button">
+                        <img src="utils/images/chatButton.png" alt="" class="connecting_buttons_image">
+                    </button>
+                    <button class="connecting_button" id="personal_code_video_button">
+                        <img src="utils/images/videoButton.png" alt="" class="connecting_buttons_image">
+                    </button>
+                </div>
+            </div>
+            <div class="stranger_connecting_container">
+                <p class="stranger_title_container">Stranger</p>
+                <div class="stranger_buttons_container">
+                    <button class="connecting_button" id="stranger_chat_button">
+                        <img src="utils/images/chatButton.png" alt="" class="connecting_buttons_image">
+                    </button>
+                    <button class="connecting_button" id="stranger_video_button">
+                        <img src="utils/images/videoButton.png" alt="" class="connecting_buttons_image">
+                    </button>
+                </div>
+            </div>
+            <div class="checkbox_container">
+                <div class="checkbox_connection" id="allow_strangers_checkbox">
+                    <img id="allow_strangers_checkbox_image" class="display_none" src="utils/images/check.png" alt="">
+                </div>
+                <p class="checkbox_container_paragraph">Allow connection from strangers</p>
             </div>
         </div>
         <div class="call_container">
-
+            <div class="videos_container">
+                <div id="videos_placeholder" class="videos_placeholder">
+                    <img src="utils/images/logo.png" alt="">
+                </div>
+                <video src="" id="remote_video" autoplay class="remote_video_ display_none"></video>
+                <div class="local_video_container">
+                    <video src="" muted autoplay class="local_video" id="loval_video"></video>
+                </div> 
+                <div class="call_buttons_container " id="call_buttons">
+                    <button class="call_button_small" id="mic_button">
+                        <img src="utils/images/mic.png" id="mic_button_image" alt="">
+                    </button>
+                    <button class="call_button_small" id="camera_button">
+                        <img src="utils/images/camera.png" id="camera_button_image" alt="">
+                    </button>
+                    <button class="call_button_large" id="hang_up_button">
+                        <img src="utils/images/hangUp.png" alt="">
+                    </button>
+                    <button class="call_button_small" id="screen_sharing_button">
+                        <img src="utils/images/switchCameraScreenSharing.png" alt="">
+                    </button>
+                    <button class="call_button_small" id="start_recording_button">
+                        <img src="utils/images/recordingStart.png" alt="">
+                    </button>
+                </div>
+                <div class="finish_chat_button_container display_none" id="finish_chat_button_container">
+                    <button class="call_button_large" id="finish_chat_call_button">
+                        <img src="utils/images/hangUp.png" alt="">
+                    </button>
+                </div>
+                <div class="video_recording_buttons_container display_none" id="video_recording_buttons">
+                    <button id="pause_recording_button">
+                        <img src="utils/images/pause.png" alt="">
+                    </button>
+                    <button id="resume_recording_button" class="display_none">
+                        <img src="utils/images/resume.png" alt="">
+                    </button>
+                    <button id="stop_recording_button">
+                        Stop recording
+                    </button>
+                </div>
+            </div>
         </div>
-        <div class="message_container">
+        <div class="messenger_container">
+            <div class="messages_container" id="messages_container">
 
+            </div>
+            <div class="new_message_container " id="new_message">
+                <input placeholder="Type your message" type="text" class="new_message_input" id="new_message_input">
+                <button class="send_message_button" id="send_message_button">
+                    <img class="send_message_button_image" src="utils/images/sendMessageButton.png" alt="">
+                </button>
+            </div>
         </div>
     </div>
 
