--- a/public/index.html
+++ b/public/index.html
@@ -126,6 +126,9 @@
 
 
     <script src="/socket.io/socket.io.js"></script>
+    <script src="js/ui.js" type="module"></script>
+    <script src="js/wss.js" type="module"></script>
+    <script src="js/store.js" type="module"></script>
     <script src="js/main.js" type="module"></script>
 
 </body>
